--- a/articles/postgresql/TOC.yml
+++ b/articles/postgresql/TOC.yml
@@ -2,122 +2,124 @@
   href: index.yml
 - name: Översikt
   items:
-  - name: Azure DB för PostgreSQL
-    href: overview.md
+    - name: Azure DB för PostgreSQL
+      href: overview.md
 - name: Snabbstarter
   expanded: true
   items:
-  - name: Skapa DB – Portal
-    href: quickstart-create-server-database-portal.md
-  - name: Skapa DB – Azure CLI
-    href: quickstart-create-server-database-azure-cli.md
-  - name: Ansluta och fråga
-    items: 
-    - name: Python
-      href: connect-python.md
-    - name: Node.js
-      href: connect-nodejs.md
-    - name: Java
-      href: connect-java.md
-    - name: Ruby
-      href: connect-ruby.md
-    - name: PHP
-      href: connect-php.md
-    - name: .NET
-      href: connect-csharp.md
-    - name: Go
-      href: connect-go.md
+    - name: Skapa DB – Portal
+      href: quickstart-create-server-database-portal.md
+    - name: Skapa DB – Azure CLI
+      href: quickstart-create-server-database-azure-cli.md
+    - name: Ansluta och fråga
+      items:
+        - name: Python
+          href: connect-python.md
+        - name: Node.js
+          href: connect-nodejs.md
+        - name: Java
+          href: connect-java.md
+        - name: Ruby
+          href: connect-ruby.md
+        - name: PHP
+          href: connect-php.md
+        - name: .NET
+          href: connect-csharp.md
+        - name: Go
+          href: connect-go.md
 - name: Självstudier
   items:
-  - name: 1 – Utforma en databas
-    items:
-    - name: Azure Portal
-      href: tutorial-design-database-using-azure-portal.md
-    - name: Azure CLI
-      href: tutorial-design-database-using-azure-cli.md
-  - name: '2 – Utforma webbapp: Python'
-    href: ../app-service-web/app-service-web-tutorial-docker-python-postgresql-app.md?toc=%2fazure%2fpostgresql%2ftoc.json
+    - name: 1 – Utforma en databas
+      items:
+        - name: Azure Portal
+          href: tutorial-design-database-using-azure-portal.md
+        - name: Azure CLI
+          href: tutorial-design-database-using-azure-cli.md
+    - name: '2 – Utforma webbapp: Python'
+      href: ../app-service-web/app-service-web-tutorial-docker-python-postgresql-app.md?toc=%2fazure%2fpostgresql%2ftoc.json
 - name: Exempel
   items:
-  - name: Azure CLI
-    href: sample-scripts-azure-cli.md
+    - name: Azure CLI
+      href: sample-scripts-azure-cli.md
 - name: Koncept
   items:
-  - name: Databas och servrar
-    items:
-    - name: Servrar
-      href: concepts-servers.md
-    - name: Versioner som stöds
-      href: concepts-supported-versions.md
-    - name: PostgreSQL-tillägg
-      href: concepts-extensions.md
-    - name: Serverloggar
-      href: concepts-server-logs.md
-  - name: Resurser
-    items:
-    - name: Prisnivåer
-      href: concepts-service-tiers.md
-    - name: Compute-enheter
-      href: concepts-compute-unit-and-storage.md
-    - name: Begränsningar
-      href: concepts-limits.md
-  - name: Dataåtkomst och säkerhet
-    items:
-    - name: Brandväggsregler
-      href: concepts-firewall-rules.md
-    - name: Konfigurera SSL
-      href: concepts-ssl-connection-security.md
-  - name: Utveckling
-    items:
-    - name: Anslutningsbibliotek
-      href: concepts-connection-libraries.md
+    - name: Databas och servrar
+      items:
+        - name: Servrar
+          href: concepts-servers.md
+        - name: Versioner som stöds
+          href: concepts-supported-versions.md
+        - name: PostgreSQL-tillägg
+          href: concepts-extensions.md
+        - name: Serverloggar
+          href: concepts-server-logs.md
+    - name: Resurser
+      items:
+        - name: Prisnivåer
+          href: concepts-service-tiers.md
+        - name: Compute-enheter
+          href: concepts-compute-unit-and-storage.md
+        - name: Begränsningar
+          href: concepts-limits.md
+    - name: Dataåtkomst och säkerhet
+      items:
+        - name: Brandväggsregler
+          href: concepts-firewall-rules.md
+        - name: Konfigurera SSL
+          href: concepts-ssl-connection-security.md
+    - name: Utveckling
+      items:
+        - name: Anslutningsbibliotek
+          href: concepts-connection-libraries.md
 - name: Instruktionsguider
   items:
-  - name: Brandväggsregler
-    items:
-    - name: Azure Portal
-      href: howto-manage-firewall-using-portal.md
-    - name: Azure CLI
-      href: howto-manage-firewall-using-cli.md
-  - name: Återställ en server
-    items:
-    - name: Azure Portal
-      href: howto-restore-server-portal.md
-    - name: Azure CLI
-      href: howto-restore-server-cli.md
-  - name: Migrera databasen
-    items:
-    - name: Dumpa och återställa
-      href: howto-migrate-using-dump-and-restore.md
-    - name: Importera och exportera
-      href: howto-migrate-using-export-and-import.md
-  - name: Anpassa konfigurationsparametrar för server
-    items:
-    - name: Azure CLI
-      href: howto-configure-server-parameters-using-cli.md
-  - name: Serverloggar
-    items:
-    - name: Azure CLI
-      href: howto-configure-server-logs-using-cli.md
+    - name: Brandväggsregler
+      items:
+        - name: Azure Portal
+          href: howto-manage-firewall-using-portal.md
+        - name: Azure CLI
+          href: howto-manage-firewall-using-cli.md
+    - name: Återställ en server
+      items:
+        - name: Azure Portal
+          href: howto-restore-server-portal.md
+        - name: Azure CLI
+          href: howto-restore-server-cli.md
+    - name: Migrera databasen
+      items:
+        - name: Dumpa och återställa
+          href: howto-migrate-using-dump-and-restore.md
+        - name: Importera och exportera
+          href: howto-migrate-using-export-and-import.md
+    - name: Anpassa konfigurationsparametrar för server
+      items:
+        - name: Azure CLI
+          href: howto-configure-server-parameters-using-cli.md
+    - name: Serverloggar
+      items:
+        - name: Azure CLI
+          href: howto-configure-server-logs-using-cli.md
 - name: Referens
   items:
-  - name: Azure CLI
-    href: /cli/azure/postgres
+    - name: Azure CLI
+      href: /cli/azure/postgres
+    - name: REST API
+      href: /rest/api/postgres
 - name: Resurser
   items:
-  - name: Azure-översikt
-    href: https://azure.microsoft.com/roadmap/
-  - name: Priser
-    href: https://azure.microsoft.com/pricing/details/postgresql/
-  - name: MSDN-forum
-    href: https://social.msdn.microsoft.com/forums/azure/en-US/home?forum=AzureDatabaseforPostgreSQL
-  - name: Stack Overflow
-    href: http://stackoverflow.com/questions/tagged/azure-database-postgresql
-  - name: Videoklipp
-    href: videos.md    
-  - name: Feedback-forum
-    href: https://feedback.azure.com/forums/597976-azure-database-for-postgresql
-  - name: Regional tillgänglighet
-    href: https://azure.microsoft.com/regions/services/
-  - name: Supportalternativ
-    href: https://azure.microsoft.com/support/options/
+    - name: Azure-översikt
+      href: 'https://azure.microsoft.com/roadmap/?category=databases'
+    - name: Priser
+      href: 'https://azure.microsoft.com/pricing/details/postgresql/'
+    - name: MSDN-forum
+      href: 'https://social.msdn.microsoft.com/forums/azure/en-US/home?forum=AzureDatabaseforPostgreSQL'
+    - name: Stack Overflow
+      href: 'http://stackoverflow.com/questions/tagged/azure-database-postgresql'
+    - name: Videoklipp
+      href: videos.md
+    - name: Feedback-forum
+      href: 'https://feedback.azure.com/forums/597976-azure-database-for-postgresql'
+    - name: Regional tillgänglighet
+      href: 'https://azure.microsoft.com/regions/services/'
+    - name: Supportalternativ
+      href: 'https://azure.microsoft.com/support/options/'
