open localization: commit translated files

--- a/articles/container-service/TOC.yml
+++ b/articles/container-service/TOC.yml
@@ -1,146 +1,8 @@
-- name: ACS-dokumentation
-  href: ./index.yml
-- name: Översikt
-  items:
-    - name: Om Container Service
-      href: container-service-intro.md
-- name: Snabbstarter
-  expanded: true
-  items:
-    - name: Kubernetes – Linux
-      href: container-service-kubernetes-walkthrough.md
-    - name: Kubernetes – Windows
-      href: container-service-kubernetes-windows-walkthrough.md
-- name: Självstudier
-  items:
-    - name: Kubernetes
-      items:
-        - name: 1 – Skapa behållaravbildningar
-          href: container-service-tutorial-kubernetes-prepare-app.md
-        - name: 2 – Skapa behållarregister
-          href: container-service-tutorial-kubernetes-prepare-acr.md
-        - name: 3 – Skapa Kubernetes-kluster
-          href: container-service-tutorial-kubernetes-deploy-cluster.md
-        - name: 4 – Köra program
-          href: container-service-tutorial-kubernetes-deploy-application.md
-        - name: 5 – Skala program
-          href: container-service-tutorial-kubernetes-scale.md
-        - name: 6 – Uppdatera program
-          href: container-service-tutorial-kubernetes-app-update.md
-        - name: 7 – Övervaka med OMS
-          href: container-service-tutorial-kubernetes-monitor.md
-    - name: DC/OS
-      items:
-        - name: Skapa/hantera kluster
-          href: container-service-dcos-manage-tutorial.md
-        - name: Belastningsutjämna program
-          href: container-service-load-balancing.md
-        - name: Skapa/hantera datavolymer
-          href: container-service-dcos-fileshare.md
-        - name: Integrera med ACR
-          href: container-service-dcos-acr.md
-- name: Exempel
-  items:
-    - name: Azure CLI
-      href: cli-samples.md
-- name: Koncept
-  items:
-    - name: Säkra behållare
-      href: container-service-security.md
-    - name: Tjänstens huvudnamn – Kubernetes
-      href: container-service-kubernetes-service-principal.md
-- name: Instruktionsguider
-  items:
-    - name: Anslut med ett ACS-kluster
-      href: container-service-connect.md
-    - name: Skala ett ACS-kluster
-      href: container-service-scale.md
-    - name: Använd utkast med ACR och ACS
-      href: container-service-draft-up.md
-    - name: Hantera med DC/OS
-      items:
-        - name: DC/OS – Linux
-          href: container-service-dcos-quickstart.md
-        - name: Hantering av behållare – UI för DC/OS
-          href: container-service-mesos-marathon-ui.md
-        - name: Hantering av behållare – REST API för DC/OS
-          href: container-service-mesos-marathon-rest.md
-        - name: DC/OS-agentpooler
-          href: container-service-dcos-agents.md
-        - name: Aktivera offentlig åtkomst till DC/OS
-          href: container-service-enable-public-access.md
-        - name: App-/användarspecifik initierare i DC/OS
-          href: container-service-application-specific-marathon.md
-        - name: Canary Release med Vamp
-          href: container-service-dcos-vamp-canary-release.md
-        - name: Övervaka DC/OS
-          items:
-            - name: Övervaka med ELK
-              href: container-service-monitoring-elk.md
-            - name: Övervaka med OMS
-              href: container-service-monitoring-oms.md
-            - name: Övervaka med Datadog
-              href: container-service-monitoring.md
-            - name: Övervaka med Sysdig
-              href: container-service-monitoring-sysdig.md
-            - name: Övervaka med Dynatrace
-              href: container-service-monitoring-dynatrace.md
-    - name: Hantera med Kubernetes
-      items:
-        - name: Hantering av behållare – användargränssnitt för Kubernetes
-          href: container-service-kubernetes-ui.md
-        - name: Distribuera Helm-diagram
-          href: container-service-kubernetes-helm.md
-        - name: >-
-            Kontinuerlig integrering och kontinuerlig leverans (CI/CD) med
-            Kubernetes och Jenkins
-          href: container-service-kubernetes-jenkins.md
-        - name: Övervaka Kubernetes
-          items:
-            - name: Övervaka med Datadog
-              href: container-service-kubernetes-datadog.md
-            - name: Övervaka med Sysdig
-              href: container-service-kubernetes-sysdig.md
-            - name: Övervaka med CoScale
-              href: container-service-kubernetes-coscale.md
-    - name: Hantera med Docker Swarm
-      items:
-        - name: Docker och Docker Compose
-          href: container-service-docker-swarm.md
-        - name: >-
-            Kontinuerlig integrering och kontinuerlig leverans (CI/CD) med
-            Docker Swarm och VSTS
-          href: container-service-docker-swarm-setup-ci-cd.md
-    - name: Distribuera Spring Boot-appar
-      items:
-        - name: >-
-            Distribuera ett Spring Boot-program på Linux i Azure Container
-            Service
-          href: container-service-deploy-spring-boot-app-on-linux.md
-        - name: >-
-            Distribuera ett Spring Boot-program på ett Kubernetes-kluster i
-            Azure Container Service
-          href: container-service-deploy-spring-boot-app-on-kubernetes.md
-- name: Referens
-  items:
-    - name: Azure CLI 2.0
-      href: /cli/azure/acs
-    - name: REST
-      href: /rest/api/compute/containerservices
+- name: Kubernetes
+  href: kubernetes/container-service-kubernetes-walkthrough.md
+- name: DC/OS och Docker Swarm
+  href: dcos-swarm/container-service-dcos-quickstart.md
 - name: Resurser
   items:
     - name: Azure-översikt
-      href: 'https://azure.microsoft.com/roadmap/'
-    - name: VANLIGA FRÅGOR OCH SVAR
-      href: container-service-faq.md
-    - name: Mallar – ACS-motor
-      href: 'https://github.com/Azure/acs-engine'
-    - name: Priser
-      href: 'https://azure.microsoft.com/pricing/details/container-service/'
-    - name: Regional tillgänglighet
-      href: 'https://azure.microsoft.com/regions/services/'
-    - name: Stack Overflow
-      href: 'http://stackoverflow.com/questions/tagged/azure-container-service'
-    - name: Videoklipp
-      href: >-
-        https://azure.microsoft.com/resources/videos/index/?services=container-service&sort=newest
+      href: 'https://azure.microsoft.com/roadmap/?category=containers'
