--- a/articles/virtual-machines/linux/toc.yml
+++ b/articles/virtual-machines/linux/toc.yml
@@ -39,6 +39,8 @@
       href: tutorial-azure-security.md
     - name: 12 – Distribuera Jenkins
       href: tutorial-jenkins-github-docker-cicd.md
+    - name: 13 – Konfigurera CI/CD med Team Services
+      href: tutorial-build-deploy-jenkins.md
 - name: Exempel
   items:
     - name: Azure CLI
@@ -62,23 +64,18 @@
     - name: Behållare
       href: containers.md
     - name: Resource Manager
-      href: >-
-        ../../azure-resource-manager/resource-group-overview.md?toc=%2fazure%2fvirtual-machines%2flinux%2ftoc.json
+      href: ../../azure-resource-manager/resource-group-overview.md?toc=%2fazure%2fvirtual-machines%2flinux%2ftoc.json
       items:
         - name: Distributionsmodeller
-          href: >-
-            ../../azure-resource-manager/resource-manager-deployment-model.md?toc=%2fazure%2fvirtual-machines%2flinux%2ftoc.json
+          href: ../../azure-resource-manager/resource-manager-deployment-model.md?toc=%2fazure%2fvirtual-machines%2flinux%2ftoc.json
         - name: Mallar för virtuella datorer
-          href: >-
-            ../windows/template-description.md?toc=%2fazure%2fvirtual-machines%2flinux%2ftoc.json
+          href: ../windows/template-description.md?toc=%2fazure%2fvirtual-machines%2flinux%2ftoc.json
     - name: Azure Linux-agent
       href: agent-user-guide.md
     - name: Azure Security Center
-      href: >-
-        ../../security-center/security-center-linux-virtual-machine.md?toc=%2fazure%2fvirtual-machines%2flinux%2ftoc.json
+      href: ../../security-center/security-center-linux-virtual-machine.md?toc=%2fazure%2fvirtual-machines%2flinux%2ftoc.json
     - name: Haveriberedskap
-      href: >-
-        ../virtual-machines-disaster-recovery-guidance.md?toc=%2fazure%2fvirtual-machines%2flinux%2ftoc.json
+      href: ../virtual-machines-disaster-recovery-guidance.md?toc=%2fazure%2fvirtual-machines%2flinux%2ftoc.json
     - name: Planerat underhåll
       href: planned-maintenance.md
       items:
@@ -177,8 +174,7 @@
         - name: Ändra storlek på en virtuell dator
           href: change-vm-size.md
         - name: Använd taggar
-          href: >-
-            ../../azure-resource-manager/resource-group-using-tags.md?toc=%2fazure%2fvirtual-machines%2flinux%2ftoc.json
+          href: ../../azure-resource-manager/resource-group-using-tags.md?toc=%2fazure%2fvirtual-machines%2flinux%2ftoc.json
           items:
             - name: Tagga en virtuell dator
               href: tag.md
@@ -187,11 +183,8 @@
         - name: Uppdatera Azure Linux-agent
           href: update-agent.md
         - name: Säkerhetskopiera med Recovery Services
-          href: >-
-            ../../backup/backup-azure-vms-first-look-arm.md?toc=%2fazure%2fvirtual-machines%2flinux%2ftoc.json
-        - name: >-
-            Ansluta en virtuell RedHat-dator till en Azure Active Directory
-            Domain Service
+          href: ../../backup/backup-azure-vms-first-look-arm.md?toc=%2fazure%2fvirtual-machines%2flinux%2ftoc.json
+        - name: Ansluta en virtuell RedHat-dator till en Azure Active Directory Domain Service
           href: join-redhat-linux-vm-to-azure-active-directory-domain-service.md
     - name: Anslut med SSH
       items:
@@ -235,12 +228,10 @@
     - name: Hantera VM-lagring
       items:
         - name: Azure Managed Disks
-          href: >-
-            ../../storage/storage-managed-disks-overview.md?toc=%2fazure%2fvirtual-machines%2flinux%2ftoc.json
+          href: ../../storage/storage-managed-disks-overview.md?toc=%2fazure%2fvirtual-machines%2flinux%2ftoc.json
           items:
             - name: Vanliga frågor och svar
-              href: >-
-                ../../storage/storage-faq-for-disks.md?toc=%2fazure%2fvirtual-machines%2flinux%2ftoc.json
+              href: ../../storage/storage-faq-for-disks.md?toc=%2fazure%2fvirtual-machines%2flinux%2ftoc.json
         - name: Kopiera filer till en virtuell Linux-dator
           href: copy-files-to-linux-vm-using-scp.md
         - name: Konvertering av en virtuell dator till Managed Disks
@@ -266,8 +257,7 @@
     - name: VM-nätverk
       items:
         - name: Skapa virtuella nätverk
-          href: >-
-            ../../virtual-network/virtual-networks-create-vnet-arm-cli.md?toc=%2fazure%2fvirtual-machines%2flinux%2ftoc.json
+          href: ../../virtual-network/virtual-networks-create-vnet-arm-cli.md?toc=%2fazure%2fvirtual-machines%2flinux%2ftoc.json
         - name: Distribuera en virtuell dator till ett befintligt virtuellt nätverk
           items:
             - name: Azure CLI
@@ -277,8 +267,7 @@
         - name: Skapa en virtuell dator med flera nätverkskort
           href: multiple-nics.md
         - name: Skapa en statisk offentlig IP-adress
-          href: >-
-            ../../virtual-network/virtual-network-deploy-static-pip-arm-cli.md?toc=%2fazure%2fvirtual-machines%2flinux%2ftoc.json
+          href: ../../virtual-network/virtual-network-deploy-static-pip-arm-cli.md?toc=%2fazure%2fvirtual-machines%2flinux%2ftoc.json
         - name: 'Konfigurera portar, slutpunkter och säkerhet'
           href: endpoints-in-resource-manager.md
         - name: Tillåt åtkomst till en virtuell dator
@@ -292,18 +281,15 @@
         - name: Skapa ett fullständigt domännamn
           href: portal-create-fqdn.md
         - name: Skapa användardefinierade vägar
-          href: >-
-            ../../virtual-network/virtual-network-create-udr-arm-cli.md?toc=%2fazure%2fvirtual-machines%2flinux%2ftoc.json
+          href: ../../virtual-network/virtual-network-create-udr-arm-cli.md?toc=%2fazure%2fvirtual-machines%2flinux%2ftoc.json
     - name: Skalning och tillgänglighet
       items:
         - name: VM-tillgänglighet
           href: manage-availability.md
         - name: Skapa en belastningsutjämnare
-          href: >-
-            ../../load-balancer/load-balancer-get-started-internet-arm-ps.md?toc=%2fazure%2fvirtual-machines%2flinux%2ftoc.json
+          href: ../../load-balancer/load-balancer-get-started-internet-arm-ps.md?toc=%2fazure%2fvirtual-machines%2flinux%2ftoc.json
         - name: Skapa flera virtuella datorer med skalningsuppsättningar
-          href: >-
-            ../../virtual-machine-scale-sets/virtual-machine-scale-sets-overview.md?toc=%2fazure%2fvirtual-machines%2flinux%2ftoc.json
+          href: ../../virtual-machine-scale-sets/virtual-machine-scale-sets-overview.md?toc=%2fazure%2fvirtual-machines%2flinux%2ftoc.json
         - name: Lodrätt skalning av virtuella datorer med Azure Automation
           href: vertical-scaling-automation.md
         - name: VM-övervakning
@@ -341,8 +327,7 @@
             - name: Distribuera din första app
               href: cloudfoundry-deploy-your-first-app.md
         - name: Översikt över Data Science VM
-          href: >-
-            ../../machine-learning/machine-learning-data-science-virtual-machine-overview.md?toc=%2fazure%2fvirtual-machines%2flinux%2ftoc.json
+          href: ../../machine-learning/machine-learning-data-science-virtual-machine-overview.md?toc=%2fazure%2fvirtual-machines%2flinux%2ftoc.json
         - name: MongoDB
           href: install-mongodb.md
         - name: MySQL
@@ -356,8 +341,7 @@
         - name: Distribuera ett Deis-trenodskluster
           href: deis-cluster.md
         - name: Distribuera Node.js-program
-          href: >-
-            ../../virtual-machines-linux-nodejs-deploy.md?toc=%2fazure%2fvirtual-machines%2flinux%2ftoc.json
+          href: ../../virtual-machines-linux-nodejs-deploy.md?toc=%2fazure%2fvirtual-machines%2flinux%2ftoc.json
         - name: Django-webbapp
           href: python-django-web-app.md
         - name: Jupyter Notebook
@@ -394,15 +378,12 @@
         - name: Vanliga migreringsfel
           href: migration-classic-resource-manager-errors.md
         - name: Community-verktyg för migrering
-          href: >-
-            ../windows/migration-classic-resource-manager-community-tools.md?toc=%2fazure%2fvirtual-machines%2flinux%2ftoc.json
+          href: ../windows/migration-classic-resource-manager-community-tools.md?toc=%2fazure%2fvirtual-machines%2flinux%2ftoc.json
         - name: VANLIGA FRÅGOR OCH SVAR
           href: migration-classic-resource-manager-faq.md
     - name: Felsöka
       items:
-        - name: >-
-            Support för att lägga till virtuella Azure-datorer i en befintlig
-            tillgänglighetsuppsättning
+        - name: Support för att lägga till virtuella Azure-datorer i en befintlig tillgänglighetsuppsättning
           href: ../virtual-machines-availability-set-supportability.md
         - name: Återställ lösenord för virtuell Linux-dator
           href: virtual-machines-linux-reset-password.md
@@ -454,8 +435,7 @@
 - name: Resurser
   items:
     - name: Skapa mallar
-      href: >-
-        ../../azure-resource-manager/resource-group-authoring-templates.md?toc=%2fazure%2fvirtual-machines%2flinux%2ftoc.json
+      href: ../../azure-resource-manager/resource-group-authoring-templates.md?toc=%2fazure%2fvirtual-machines%2flinux%2ftoc.json
     - name: Azure-översikt
       href: 'https://azure.microsoft.com/roadmap/'
     - name: Community-mallar
@@ -467,7 +447,6 @@
     - name: Stack Overflow
       href: 'http://stackoverflow.com/questions/tagged/azure-virtual-machine'
     - name: Videoklipp
-      href: >-
-        https://azure.microsoft.com/documentation/videos/index/?services=virtual-machines
+      href: 'https://azure.microsoft.com/documentation/videos/index/?services=virtual-machines'
     - name: VANLIGA FRÅGOR OCH SVAR
       href: faq.md
