open localization: commit translated files

--- a/articles/cosmos-db/TOC.yml
+++ b/articles/cosmos-db/TOC.yml
@@ -5,8 +5,7 @@
     - name: Om Azure Cosmos DB
       href: introduction.md
     - name: Välkommen DocumentDB-kunder
-      href: >-
-        https://azure.microsoft.com/blog/dear-documentdb-customers-welcome-to-azure-cosmos-db/
+      href: 'https://azure.microsoft.com/blog/dear-documentdb-customers-welcome-to-azure-cosmos-db/'
 - name: Snabbstarter
   expanded: true
   items:
@@ -106,9 +105,6 @@
       href: consistency-levels.md
     - name: Dataflöde
       href: request-units.md
-      items:
-        - name: Enheter för programbegäran per minut
-          href: request-units-per-minute.md
     - name: 'API:er för flera modeller'
       items:
         - name: DocumentDB
@@ -138,6 +134,8 @@
               href: documentdb-resources.md
             - name: SQL-frågor
               href: documentdb-sql-query.md
+            - name: SQL-frågeprestanda
+              href: documentdb-sql-query-metrics.md
             - name: SQL-spelplan
               href: 'https://www.documentdb.com/sql/demo'
             - name: Partitionering
@@ -195,8 +193,7 @@
                 - name: Stack Overflow
                   href: 'http://stackoverflow.com/questions/tagged/azure-cosmosdb'
                 - name: Videoklipp
-                  href: >-
-                    https://azure.microsoft.com/documentation/videos/index/?services=cosmos-db
+                  href: 'https://azure.microsoft.com/documentation/videos/index/?services=cosmos-db'
                 - name: Tjänstuppdateringar
                   href: 'https://azure.microsoft.com/updates/?product=cosmos-db'
                 - name: Community-portal
@@ -224,8 +221,7 @@
         - name: Tabell-API
           items:
             - name: Table Storage
-              href: >-
-                https://docs.microsoft.com/rest/api/storageservices/fileservices/Table-Service-Concepts
+              href: 'https://docs.microsoft.com/rest/api/storageservices/fileservices/Table-Service-Concepts'
         - name: Ändringsfeed
           href: change-feed.md
         - name: Geospatial
@@ -284,8 +280,12 @@
           href: powerbi-visualize.md
         - name: Utnyttja ODBC-drivrutinen för datavisualisering
           href: odbc-driver.md
+        - name: 'Använd Spring Boot Starter med API:er för DocumentDB'
+          href: documentdb-java-spring-boot-starter-with-cosmos-db.md
 - name: Referens
   items:
+    - name: Kodexempel
+      href: 'https://azure.microsoft.com/en-us/resources/samples/?service=cosmos-db'
     - name: 'DocumentDB-API:er'
       items:
         - name: Java
